<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_save_chat_option"
        android:title="@string/enregistrer_la_discussion"
        app:showAsAction="never">
        <!-- user click korlei jate ashe -->

    </item>

    <item
        android:id="@+id/main_change_bg_option"
        android:title="@string/changer_le_fond_d_cran"
        app:showAsAction="never">
        <!-- user click korlei jate ashe -->

    </item>

    <item
        android:id="@+id/main_disconnect_option"
        android:title="@string/se_d_connecter"
        app:showAsAction="never">
        <!-- user click korlei jate ashe -->

    </item>

    <item
        android:id="@+id/main_remove_chat_option"
        android:title="@string/supprimer_la_discussion"
        app:showAsAction="never">
        <!-- user click korlei jate ashe -->

    </item>

    <item
        android:id="@+id/main_reset_layout"
        android:title="@string/reinitialiser_le_theme"
        app:showAsAction="never">
        <!-- user click korlei jate ashe -->

    </item>

    <item
        android:id="@+id/main_voice_mode"
        android:title="@string/mode_voix_eteint"
        app:showAsAction="never">
        <!-- user click korlei jate ashe -->

    </item>


</menu>